# libpeer

./: .gitmodules  CMakeLists.txt
.github/workflows/: build.yml  clang-format-check.yml  sanitizers.yml
examples/generic/: main.c
src/: CMakeLists.txt  agent.c  base64.c  base64.h  config.h  dtls_srtp.c  peer_connection.c  peer_connection.h  peer_signaling.c  rtp.c  rtp.h  utils.h
src/include/: cJSON.h
